# tvoizakaz

./: .env.example  .gitignore  Dockerfile  QUICK_START.md  README.md  SETUP.md  START_HERE.md  beta.env  docker-compose.yml  main.py  pyproject.toml  pytest.ini  run_tests.py  start_backend.bat  start_backend.sh  start_frontend.bat  start_frontend.sh
doc/: .env.example  API_DOCUMENTATION.md  ARCHITECTURE_REFACTOR.md  DEVELOPMENT.md  ENTERPRISE_UPGRADE.md  GITIGNORE_DOCKERIGNORE.md  INDEX.md  PROJECT_ORGANIZATION.md  PROJECT_STRUCTURE.md  PYPROJECT_TOML.md  QUICK_START.md  README_DUPLICATES_FIX.md  career_tests_seed.json  gap_report.txt  spec_coverage.json
fronted/: Dockerfile  env.local.beta  env.local.example  next.config.ts  package-lock.json  package.json
fronted/src/app/: HomePage.css  globals.css  layout.tsx  page.tsx
fronted/src/app/about/: page.tsx
fronted/src/app/admin/: page.tsx
fronted/src/app/admin/commission/: page.tsx
fronted/src/app/admin/content/: page.tsx
fronted/src/app/admin/login/: page.tsx
fronted/src/app/admin/support/: page.tsx
fronted/src/app/chats/: page.tsx
fronted/src/app/community/: page.tsx
fronted/src/app/contacts/: page.tsx
fronted/src/app/favorites/: page.tsx
fronted/src/app/forgot-password/: page.tsx
fronted/src/app/login/: page.tsx
fronted/src/app/orders/: page.tsx
fronted/src/app/orders/[id]/: page.tsx
fronted/src/app/portfolio/: page.tsx
fronted/src/app/profile/: page.tsx
fronted/src/app/register/: page.tsx
fronted/src/app/reset-password/: page.tsx
fronted/src/app/verify-phone/: page.tsx
fronted/src/components/: ChatButton.tsx  DebugWindow.tsx  OfferMessage.tsx  WebSocketConnector.tsx
fronted/src/components/about/: AboutPage.module.css
fronted/src/components/admin/: AdminLogin.module.css  AdminPage.module.css  CommissionPage.module.css  SupportPage.module.css
fronted/src/components/auth/: AuthPage.module.css  RegisterPage.module.css  ResetPassword.module.css
fronted/src/components/chats/: ChatList.tsx  ChatWindow.tsx  ChatsLayout.tsx  ChatsPage.module.css  StartChatPage.module.css
fronted/src/components/community/: ArticlesGrid.tsx  CareerGuide.tsx  CommunityHero.tsx  CommunityPage.module.css  CommunityTabs.tsx  NewsGrid.tsx  TestsGrid.tsx  types.ts
fronted/src/components/contacts/: ContactsPage.module.css
fronted/src/components/favorites/: FavoritesPage.module.css
fronted/src/components/home/: CategoriesSection.tsx  HeroSection.tsx  HomeSections.module.css  OrdersCarousel.tsx
fronted/src/components/layout/: Footer.module.css  Footer.tsx  Header.module.css  Header.tsx
fronted/src/components/orders/: CreateOrderPage.module.css  OrderCard.tsx  OrderPage.module.css  OrdersFiltersSidebar.tsx  OrdersHeader.tsx  OrdersList.tsx  OrdersPage.module.css  OrdersSort.tsx  RespondOrderPage.module.css
fronted/src/components/portfolio/: PortfolioPage.module.css
fronted/src/components/profile/: ProfileHeaderSection.tsx  ProfileInfoTab.tsx  ProfileLoadingState.tsx  ProfileOrdersTab.tsx  ProfilePage.module.css  ProfilePortfolioTab.tsx  ProfileSettingsTab.tsx  ProfileSidebar.tsx
fronted/src/components/users/: UserProfilePage.module.css
fronted/src/components/verify/: VerifyPhonePage.module.css
fronted/src/dto/: category.dto.ts  chat.dto.ts  common.dto.ts  favorite.dto.ts  index.ts  message.dto.ts  order.dto.ts  review.dto.ts  search.dto.ts  user.dto.ts
fronted/src/hooks/: useFavorites.ts
fronted/src/providers/: AuthProvider.tsx  WebSocketProvider.tsx
fronted/src/styles/: main.css  reset.css
fronted/src/utils/: apiClient.ts  config.ts  currency.ts  portfolioApi.ts  timeUtils.ts
infrastructure/repositiry/: verification_repository.py
presentation/: __init__.py
scripts/: create_support_user.py  create_tables.py  init_categories.py
src/: config.py  main.py
src/domain/entity/: chatentity.py  messageentity.py  orderentity.py  userentity.py
src/domain/interfaces/: repositories.py
src/domain/interfaces/repository/: order_repository.py  user_repository.py
src/domain/services/: __init__.py  career_test_service.py  order_service.py  user_service.py  workflow_service.py
src/infrastructure/: common_utils.py  dependencies.py
src/infrastructure/cache/: memory_cache.py  redis_client.py
src/infrastructure/di/: container.py
src/infrastructure/monitoring/: logger.py
src/infrastructure/repositiry/: base_repository.py  chat_repository.py  db_models.py  message_repository.py  order_repository.py  user_repository.py  verification_repository.py
src/infrastructure/repositories/: user_repository.py
src/infrastructure/security/: auth.py  content_filter.py  rate_limiter.py  reset_token_store.py
src/infrastructure/services/: auth_service.py  career_guidance_service.py  chat_service.py  content_service.py  favorite_service.py  message_service.py  order_service.py  portfolio_service.py  rating_service.py  reward_service.py  user_service.py  verification_service.py
src/presentation/api/v1/: admin.py  auth.py  career.py  categories.py  chats.py  content.py  favorites.py  orders.py  portfolio.py  ratings.py  reviews.py  rewards.py  router.py  search.py  users.py  verification.py  websocket_chats.py  websocket_handler.py
tests/: README.md  SUMMARY.md  __init__.py  conftest.py  pytest.ini  requirements.txt  run_all_flow_tests.bat  run_all_flow_tests.sh  run_flow_tests.py
(+18 files in other folders)
